tests/extended/valid/UnionType_Valid_3.whiley
define intreal as int|real

//void f(intreal x):
//    if(x in int):
//        out->println("Got int")
//    else:
//        out->println("Got real")

void System::main([string] args):
    f(1)
    f(1.23)
